--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
     <!-- End Controls -->
 
     <!-- Price -->
-    <aside class="panel price">
+    <aside class="panel price" >
       <h2>Your pizza's price</h2>
 
       <b>$10 cheese pizza</b>
-      <ul>
-        <li>$1 pepperoni</li>
-        <li>$1 mushrooms</li>
+      <ul id="pinolo">
+        <li >$1 pepperoni</li>
+        <li>$1 Mushrooms</li>
         <li>$1 green peppers</li>
         <li>$3 white sauce</li>
         <li>$5 gluten-free crust</li>
